--- a/docker-compose-single-broker.yml
+++ b/docker-compose-single-broker.yml
@@ -33,6 +33,7 @@ services:
         weightrange-topic-2:1:1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://172.31.27.224:9092
+      KAFKA_HEAP_OPTS: -Xmx256M -Xms128M
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
