--- a/docker-compose-single-broker.yml
+++ b/docker-compose-single-broker.yml
@@ -34,6 +34,7 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://172.31.21.66:9092
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+      KAFKA_BROKER_ID: 1
       KAFKA_HEAP_OPTS: -Xmx512M -Xms256M
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
