--- a/docker-compose-single-broker.yml
+++ b/docker-compose-single-broker.yml
@@ -38,5 +38,6 @@ services:
       KAFKA_HEAP_OPTS: -Xmx512M -Xms256M
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./kafka-data:/kafka/data
     depends_on:
       - zookeeper
