--- a/docker-compose-single-broker.yml
+++ b/docker-compose-single-broker.yml
@@ -39,6 +39,6 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./kafka-data:/kafka/data
-    entrypoint: /bin/bash -c "chmod -R 775 /kafka && chmod -R 775 /kafka/data && /usr/bin/start-kafka"
+    # entrypoint: /bin/bash -c "chmod -R 775 /kafka && chmod -R 775 /kafka/data && /usr/bin/start-kafka"
     depends_on:
       - zookeeper
