--- a/docker-compose-single-broker.yml
+++ b/docker-compose-single-broker.yml
@@ -41,5 +41,4 @@ services:
       - ./kafka-data:/kafka/data
     entrypoint: /bin/bash -c "chmod -R 775 /kafka && chmod -R 775 /kafka/data && /opt/kafka_2.13-2.8.1/bin/kafka-server-start.sh /opt/kafka_2.13-2.8.1/config/server.properties"
     depends_on:
-      zookeeper:
-        condition: service_healthy
+      - zookeeper
