--- a/docker-compose-single-broker.yml
+++ b/docker-compose-single-broker.yml
@@ -39,7 +39,7 @@ services:
       KAFKA_HEAP_OPTS: -Xmx512M -Xms256M
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - ./kafka-data:/kafka/data
-    entrypoint: /bin/bash -c "chmod -R 775 /kafka && chmod -R 775 /kafka/data && /opt/kafka_2.13-2.8.1/bin/kafka-server-start.sh /opt/kafka_2.13-2.8.1/config/server.properties"
+    #   - ./kafka-data:/kafka/data
+    # entrypoint: /bin/bash -c "chmod -R 775 /kafka && chmod -R 775 /kafka/data && /opt/kafka_2.13-2.8.1/bin/kafka-server-start.sh /opt/kafka_2.13-2.8.1/config/server.properties"
     depends_on:
       - zookeeper
