--- a/docker-compose-single-broker.yml
+++ b/docker-compose-single-broker.yml
@@ -4,14 +4,14 @@ services:
     image: wurstmeister/zookeeper
     ports:
       - "2181:2181"
+    networks:
+      - kafka_network
+
   kafka:
     image: wurstmeister/kafka
-    # build: .
     ports:
       - "9092:9092"
     environment:
-      # KAFKA_ADVERTISED_HOST_NAME: 172.31.27.224
-      # KAFKA_CREATE_TOPICS: "test:1:1"
       KAFKA_CREATE_TOPICS: >
         delete-payment-topic:1:1,
         delete-service-topic:1:1,
@@ -43,3 +43,9 @@ services:
     entrypoint: /bin/bash -c "chmod -R 775 /kafka && chmod -R 775 /kafka/data && /opt/kafka_2.13-2.8.1/bin/kafka-server-start.sh /opt/kafka_2.13-2.8.1/config/server.properties"
     depends_on:
       - zookeeper
+    networks:
+      - kafka_network
+
+networks:
+  kafka_network:
+    driver: bridge
