--- a/docker-compose-single-broker.yml
+++ b/docker-compose-single-broker.yml
@@ -42,11 +42,11 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://172.31.69.243:9092
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
       KAFKA_BROKER_ID: 1
-      KAFKA_HEAP_OPTS: -Xmx512M -Xms256M
+      # KAFKA_HEAP_OPTS: -Xmx512M -Xms256M
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - ./kafka-data:/kafka/data
-    entrypoint: /bin/bash -c "chmod -R 775 /kafka && chmod -R 775 /kafka/data && /opt/kafka_2.13-2.8.1/bin/kafka-server-start.sh /opt/kafka_2.13-2.8.1/config/server.properties"
+    #   - ./kafka-data:/kafka/data
+    # entrypoint: /bin/bash -c "chmod -R 775 /kafka && chmod -R 775 /kafka/data && /opt/kafka_2.13-2.8.1/bin/kafka-server-start.sh /opt/kafka_2.13-2.8.1/config/server.properties"
     depends_on:
       - zookeeper
     networks:
